# trace-tree

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: render_agentleash_audit.py  sample_audit.jsonl
src/trace_tree/: __init__.py  __main__.py  parser.py  render.py  tree.py
tests/: test_parser.py  test_render.py  test_tree.py
